--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,6 +2,13 @@
 <html lang="en" xmlns:th = "http://thymeleaf.org">
     <head th:fragment = "site-head"></head>
     <body>
+        <header th:fragment = "logged-in" th:remove="tag">
+            <header>
+                <form method = "post" th:action="@{users/logout}">
+                    <input type="submit" value="Logout">
+                </form>
+            </header>
+        </header>
         <header th:fragment = "logged-out" th:remove="tag">
             <header>
                 <a href="users/login.html" th:href="@{users/login}">Login</a>
