--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th = "http://thymeleaf.org">
-    <head>
-        <title>Spring Technical Blog Application MVC</title>
+    <head th:replace = "layout :: site-head">
     </head>
-    <header th:replace = "layout :: logged-out"></header>
+    <header th:replace = "layout :: logged-in"></header>
     <body>
-        <h1>All Technical Posts</h1>
+        <h1>Welcome User. These are your posts.</h1>
         <main id="posts">
-            <post th:each="p : ${posts}">
+            <post th:each = "p : ${onePost}">
                 <h2 th:text = "${p.title}"></h2>
-                <i>Posted On: </i><span th:text = "${p.date}"></span>
+                <i>Posted on</i> <span th:text = "${p.date}"></span>
                 <div>
                     <p th:text = "${p.body}"></p>
                 </div>
