--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th = "http://thymeleaf.org">
-    <head th:replace = "layout :: site-head">
+    <head>
         <title>Spring Application Login</title>
     </head>
     <header th:replace = "layout :: logged-out"></header>
