--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -7,9 +7,9 @@
     <H2>Please Login:</H2>
     <form method= "post" th:object = "${User}">
         <label for= "username">UserName:</label>
-        <input type= "text" id= "username">
+        <input type= "text" id= "username" name = "username">
         <label for= "password">Password:</label>
-        <input type= "password" id= "password">
-        <input type= "submit" value= "Login">
+        <input type= "password" id= "password" name = "password">
+        <input type= "submit" value= "Login" name = "loginbtn">
     </form>
 </html>
