--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -4,6 +4,7 @@
     <body>
         <header th:fragment = "logged-in" th:remove="tag">
             <header>
+                <a href = "posts/create.html" th:href = "@{/posts/newpost}">Create post</a>
                 <form method = "post" th:action="@{/users/logout}">
                     <input type="submit" value="Logout">
                 </form>
