--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+<!Doctype html>
+<html xmlns:th="http://thymeleaf.org">
+  <head>
+    <title>Spring Application Create Post</title>
+  </head>
+  <header th:replace="layout :: logged-in"></header>
+  <body>
+  <h1>Create New Post</h1>
+  <form method="post" th:action="@{/posts/create}">
+    <div>Post Title:</div>
+    <div>
+      <input type="text" id="title" name="title" />
+    </div>
+    <div>Description:</div>
+    <div>
+      <textarea rows="7" cols="100" name="body">
+
+      </textarea></div>
+    <div>
+      <input type="submit" value="Submit"/>
+    </div>
+  </form>
+  </body>
 </html>
