--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -6,11 +6,17 @@
     <body>
         <h1>Welcome User. These are your posts.</h1>
         <main id="posts">
-            <post th:each = "p : ${onePost}">
+            <post th:each = "p : ${post}">
                 <h2 th:text = "${p.title}"></h2>
                 <i>Posted on</i> <span th:text = "${p.date}"></span>
                 <div>
                     <p th:text = "${p.body}"></p>
+                </div>
+                <div>
+                    <a th:href = "@{/editPost(postId = ${p.id})}">Edit</a>
+                    <form th:action = "@{/deletePost(postId = ${p.id})}" th:method = "delete">
+                        <input type = "submit" value = "Delete">
+                    </form>
                 </div>
             </post>
         </main>
