--- a/src/main/resources/templates/users/registration.html
+++ b/src/main/resources/templates/users/registration.html
@@ -5,13 +5,22 @@
     </head>
     <header th:replace = "layout :: logged-out"></header>
     <H2>Pleaser register:</H2>
-    <form method="post" th:object = "${User}">
-        <label for="username">Username:</label>
-        <input type= "text" id="username" name="username"><br>
-        <label for="password">Password:</label>
-        <input type= "password" id="password" name="password"><br>
-        <label for="fullname">Full Name:</label>
-        <input type= "text" id="fullname" name="fullname"><br>
-        <input type= "submit" value="Register">
+    <form th:action = "@{/users/registration}" th:method = "post" th:object = "${User}">
+        <label for = "username">Username:</label>
+        <input type = "text" id = "username" name = "username"th:field = "${User.username}"><br><br>
+
+        <label for = "password">Password:</label>
+        <input type = "password" id = "password" name = "password" th:field = "${User.password}"><br><br>
+
+        <label for = "fullname">Full Name:</label>
+        <input type = "text" id = "fullname" name = "fullname" th:field = "${User.profile.fullName}"><br><br>
+
+        <label for = "emailaddress">Email Address:</label>
+        <input type = "text" id = "emailaddress" name = "emailaddress" th:field = "${User.profile.emailAddress}"><br><br>
+
+        <label for = "mobilenumber">Mobile Number:</label>
+        <input type = "text" id = "mobilenumber" name = "mobilenumber" th:field = "${User.profile.mobileNumber}"><br><br>
+
+        <input type = "submit" value = "Register">
     </form>
 </html>
