--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -5,7 +5,7 @@
     </head>
     <header th:replace = "layout :: logged-out"></header>
     <H2>Please Login:</H2>
-    <form method= "post" th:object = "${User}">
+    <form th:action = "@{/users/login}" th:method = "POST" th:object = "${User}">
         <label for= "username">UserName:</label>
         <input type= "text" id= "username" name = "username">
         <label for= "password">Password:</label>
